<resources>
    <string name="app_name">Memory Keeper</string>
    <string name="action_settings">Settings</string>

    <!-- TextView -->
    <string name="forgot_pass"><u>Forgot password?</u></string>
    <string name="fingerprint_login_description">One-touch Sign In</string>
    <string name="no_fingerprint_sensor">Your device does not have a Fingerprint Sensor</string>
    <string name="fingerprint_permission_no_enabled">Fingerprint authentication permission not enabled</string>
    <string name="register_at_least_one_fingerprint">Register at least one fingerprint in Settings</string>
    <string name="lock_screen_security_not_enable">Lock screen security not enabled in Settings</string>

    <!-- EditText -->
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="title">Title</string>
    <string name="long_description">Long description...</string>
    <string name="email">email</string>

    <!-- Button -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register_fingerprint">Register Fingerprint</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add_image">Add Image</string>
    <string name="read_qrcode">Read QRCode</string>
    <string name="update">Update</string>

    <!-- Label -->
    <string name="label_sign_up">Sign Up</string>
    <string name="label_memory_list">Memory List</string>
    <string name="label_new_memory">New Memory</string>
    <string name="label_qrcode_login">QRCode Login</string>
    <string name="label_fingerprint_login">Fingerprint Login</string>
    <string name="label_detailed_memory">Detailed Memory</string>

    <!-- Temp Array -->
    <array name="temp_list">
        <item>Memory 1</item>
        <item>Memory 2</item>
        <item>Memory 3</item>
        <item>Memory 4</item>
        <item>Memory 5</item>
    </array>

    <!-- Dialog -->
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="which_email">Which email do you want to use to receive a new password?</string>

    <!-- Toast -->
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="fill_all_fields">You must fill all fields!</string>
    <string name="auth_failed">Authentication Failed: </string>
    <string name="qrcode_generated">QR Code generated and saved in: </string>
    <string name="password_does_not_match">The value of RepeatPassword does not match the Password!</string>
    <string name="permission_granted">Permission Granted!!</string>
    <string name="permission_denied">Permission Denied!!</string>
    <string name="fields_should_not_be_empty">The fields should not be empty!</string>
    <string name="check_email">"Email not sent. Please check if it is correct!"</string>
    <string name="email_sent">Email sent successfully</string>
    <string name="email_sent_qrcode">Soon you\'ll receive an email with your QRCode!</string>
    <string name="qrcode_invalid">Sorry, but QRCode is invalid!</string>

    <string name="remember_me">Remember-me</string>

    <!-- Email Texts -->
    <string name="email_subject">QRCode - Memory Keeper</string>
    <string name="email_body">Thanks for subscribing in our App!</string>

</resources>
