<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp">

    <LinearLayout
        android:userId="@+userId/activitySignUpTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:userId="@+userId/activitySignUpEtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <EditText
            android:userId="@+userId/activitySignUpEtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="10dp"/>
        
        <EditText
            android:userId="@+userId/activitySignUpEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>
        
        <EditText
            android:userId="@+userId/activitySignUpEtRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>
        
        <Button
            android:userId="@+userId/activitySignUpBtRegisterFingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprint"
            android:layout_marginTop="40dp"/>

        <Button
            android:userId="@+userId/activitySignUpBtGenerateQrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_qr_code"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+userId/activitySignUpTop"
        android:layout_marginTop="40dp">

        <Button
            android:userId="@+userId/activitySignUpBtCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1" />

        <Button
            android:userId="@+userId/activitySignUpBtOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
